# simple-report-system

./: README.md  pyproject.toml
.devcontainer/: devcontainer.json  onCreate.sh  postCreate.sh
src/: app.py
src/pages/: reports.py  vizualize.py
